#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(LTP, 0.1, Wanxiang Che car@ir.hit.edu.cn)
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(LTP, 0.1)
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lcrfwordseg':
AC_CHECK_LIB([crfwordseg], [main])
# FIXME: Replace `main' with a function in `-lpostagger':
AC_CHECK_LIB([postagger], [main])

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h limits.h memory.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/socket.h sys/time.h sys/timeb.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STAT
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MKTIME
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([dup2 getcwd inet_ntoa memchr memmove memset mkdir munmap regcomp select socket sqrt strchr strcspn strdup strerror strrchr strspn strstr strtoull])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/__ltp_dll/Makefile
                 src/__xml4nlp/Makefile
                 src/__maxent/Makefile
                 src/_crfwordsegment/Makefile
                 src/_split_sentence/Makefile
                 src/_crfwordsegment/util/Makefile
                 src/_gparser/Makefile
                 src/_ner/Makefile
                 src/_srl/Makefile
                 src/_svmtagger/Makefile
                 src/test/Makefile
                 src/__util/Makefile
                 src/__crf++/Makefile
                 ltp_data/Makefile
                 test_data/Makefile
                 doc/Makefile
		 ])
AC_OUTPUT
