[package]
name = "ltp"
version = "0.1.8"
edition = "2021"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
description = "Language Technology Platform For Rust."
homepage = "https://github.com/HIT-SCIR/ltp"
repository = "https://github.com/HIT-SCIR/ltp"
keywords = ["ltp", "nlp"]
exclude = [".github"]
readme = "README.md"
license-file = "LICENSE"

[[example]]
name = "cws"
path = "examples/cws.rs"
required-features = ["serialization", "parallel"]

[[example]]
name = "pos"
path = "examples/pos.rs"
required-features = ["serialization", "parallel"]

[[example]]
name = "ner"
path = "examples/ner.rs"
required-features = ["serialization", "parallel"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["serialization", "parallel"]

[dependencies]
anyhow = "1"
num-traits = "0.2"
itertools = "0.10"

cedarwood = "0.4"

# 断句避免过多内存申请
smallvec = { version = "1" }
# 数据集 shuffle
rand = { version = "0.8" }
# 特征裁剪
binary-heap-plus = { version = "0.5" }

# 并行
rayon = { version = "1.5", optional = true }

# 序列化
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
apache-avro = { version = "0.14.0", optional = true }

# Todo: Nocopy Serialize 更快地加载速度
compact_str = { version = "0.6", optional = true }
rkyv = { version = "0.7", optional = true }

[features]
default = []
char-type = []
cross-char = []
near-char-type = []
parallel = ["rayon"]
serialization = ["serde", "serde_json", "apache-avro"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }

ndarray = "0.15"
ndarray-npy = { version = "0.8", features = ["npz"] }
