lib_LTLIBRARIES = libcrfpp.la

libcrfpp_la_SOURCES = \
  encoder.cpp \
  feature_cache.cpp  \
  feature.cpp  \
  feature_index.cpp  \
  lbfgs.cpp \
  libcrfpp.cpp \
  node.cpp \
  param.cpp \
  path.cpp \
  tagger.cpp \
  common.h  config-win32.h  darts.h    feature_cache.h  freelist.h  mmap.h  param.h  scoped_ptr.h      tagger.h  timer.h \
  config.h  crfpp.h         encoder.h  feature_index.h  lbfgs.h     node.h  path.h   stream_wrapper.h  thread.h
