lib_LTLIBRARIES = libme.la

libme_la_SOURCES = \
  display.cpp  gistrainer.cpp   maxentmodel.cpp  mmapfile.c  modelfile.cpp  trainer.cpp eventspace.tcc \
  display.hpp     ext_algorithm.hpp  gistrainer.hpp  itemmap.hpp  maxentmodel.hpp  mmapfile.h     rfevent.hpp \
  eventspace.hpp  finite.h           hash_map.hpp    lbfgs.h      meevent.hpp      modelfile.hpp  trainer.hpp itemmap.tcc
