INCLUDES = -I. -I../__crf++ -I./util

SUBDIRS = util

lib_LTLIBRARIES = libcrfwordseg.la

libcrfwordseg_la_SOURCES = \
  CRFSegEngine.h \
  CRFWS_DLL.cpp \
  CRFWS_DLL_x.cpp \
  CWSTaggerImpl.cpp \
  DictBase.h \
  SegEngine.h \
  CRFSegEngine.cpp \
  CRFWS.cpp \
  CRFWS_DLL.h \
  CRFWS.h \
  CWSTaggerImpl.h \
  LASBase.h \
  SegEngine.cpp

