lib_LTLIBRARIES = libgparser.la

libgparser_la_SOURCES = \
  Alphabet.cpp     DepDecoder2O.cpp  DepParser.cpp  DepReader.cpp   gparser_dll.cpp         KBestParseForest.cpp  Parameter.cpp \
  CONLLReader.cpp  DepDecoder.cpp    DepPipe2O.cpp  DepWriter.cpp   gparser_dll_x.cpp       main.cpp              ParseForestItem.cpp \
  CONLLWriter.cpp  DepInstance.cpp   DepPipe.cpp    FeatureVec.cpp  KBestParseForest2O.cpp  MyLib.cpp             ParserOptions.cpp \
  Alphabet.h     DepDecoder2O.h  DepParser.h  DepReader.h   gparser_dll.h         MultiArray.h  Parameter.h \
  CONLLReader.h  DepDecoder.h    DepPipe2O.h  DepWriter.h   KBestParseForest2O.h  MyLib.h       ParseForestItem.h \
  CONLLWriter.h  DepInstance.h   DepPipe.h    FeatureVec.h  KBestParseForest.h    MyVector.h    ParserOptions.h
