lib_LTLIBRARIES = libner.la

libner_la_SOURCES = \
  Dictionary.cpp \
  IRNE7TypeRecog.cpp \
  MyNLPlib.cpp \
  RuleNErecog.cpp \
  InitDic.cpp \
  Model.cpp  \
  NBestHMM.cpp \
  NER_DLL.cpp \
  NER_DLL_x.cpp \
  Dictionary.h  InitDic.h  IRNE7TypeRecog.h  Model.h  MyNLPlib.h  NBestHMM.h  NER_DLL.h  RuleNErecog.h
