INCLUDES = -I. -I../__maxent

lib_LTLIBRARIES = libsrl.la

libsrl_la_SOURCES = \
  DepSRL.cpp	MyTree.cpp	SRLBaseline.cpp	SRLBaselineExt.cpp  SRL_DLL.cpp	DataPreProcess.cpp	MyLib.cpp	SRL_DLL_x.cpp \
  Configuration.cpp	FeatureExtractor.cpp	Sentence.cpp	DataPreProcess.h	MyLib.h	DataStruct.h	MyStruct.h	SRLBaselineExt.h \
  ConstVar.h	DepSRL.h	MyTree.h	SRLBaseline.h	SRL_DLL.h	Configuration.h	FeatureExtractor.h	Sentence.h	tree.hh
