lib_LTLIBRARIES = libpostagger.la

libpostagger_la_SOURCES = \
  common.cpp \
  dict.h \
  hash.cpp \
  list.h \
  MyLib.cpp \
  stack.h \
  svmtagger_dll_x.cpp \
  tagger.cpp \
  weight.cpp \
  common.h \
  er.cpp \
  hash.h \
  Makefile.am \
  MyLib.h \
  svmtagger_dll.cpp \
  swindow.cpp \
  tagger.h \
  weight.h \
  dict.cpp \
  er.h \
  list.cpp \
  marks.h \
  stack.cpp \
  svmtagger_dll.h \
  swindow.h 
  #test_svmtagger_dll.cpp
